--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,6 +34,7 @@ settings-multiplatform = "1.1.1"
 uiUnitAndroid = "1.6.0"
 
 exposed = "0.47.0"
+h2_version = "2.2.224"
 
 [libraries]
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
@@ -84,6 +85,8 @@ ktor-server-netty = { module = "io.ktor:ktor-server-netty", version.ref = "ktor"
 ktor-server-core = { module = "io.ktor:ktor-server-core", version.ref = "ktor" }
 ktor-server-content-negotating = { module = "io.ktor:ktor-server-content-negotiation", version.ref = "ktor" }
 ktor-server-serialization = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
+ktor-server-auth = { module = "io.ktor:ktor-server-auth", version.ref = "ktor" }
+ktor-server-auth-jwt = { module = "io.ktor:ktor-server-auth-jwt", version.ref = "ktor" }
 
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx" }
@@ -104,6 +107,7 @@ exposed-dao = { module = "org.jetbrains.exposed:exposed-dao", version.ref = "exp
 exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "exposed" }
 exposed-kotlin-datetime = { module = "org.jetbrains.exposed:exposed-kotlin-datetime", version.ref = "exposed" }
 exposed-json = { module = "org.jetbrains.exposed:exposed-json", version.ref = "exposed" }
+h2-database = { module = "com.h2database:h2", version.ref = "h2_version" }
 
 [plugins]
 kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
@@ -121,6 +125,7 @@ voyaer-multiplatform = ["voyager-navigator", "voyager-bottomSheetNavigator", "vo
 ktor-multiplatform = ["ktor-client-core", "ktor-client-json", "ktor-client-cio",
     "ktor-client-auth", "ktor-client-logging", "ktor-client-serialization", "ktor-client-content-negotating"]
 ktor-multiplatform-jvm = ["ktor-client-core-jvm", "ktor-client-apache"]
-ktor-server = ["ktor-server-content-negotating", "ktor-server-core", "ktor-server-netty", "ktor-server-serialization"]
+ktor-server = ["ktor-server-content-negotating", "ktor-server-core", "ktor-server-netty", "ktor-server-serialization",
+    "ktor-server-auth", "ktor-server-auth-jwt"]
 koin-multiplatform = ["koin-core", "koin-core-coroutines", "koin-compose", "koin-ktor"]
 exposed = ["exposed-core", "exposed-crypt", "exposed-dao", "exposed-jdbc", "exposed-kotlin-datetime", "exposed-json"]
